=========1.4b26===========
- Contraction of version number.
- Log if SetProcessAffinityMask is not available (suggested by E.M.).
- pipe.cpp : Make PipeStruct a proper class with private/public members.
- Check for EOF in GUI input.
- pipe.cpp : delay reporting EOF until buffer is empty.
- Messages from the Engine to PG were not logged in the windows version.
=========1.4w10UCIb24===========
- Portability fixes for WIN9X (Eric Mullins).
- Portability fixes for MSVC++ (Eric Mullins).
- Default setting of RepeatPV is now true.
- Do not read data if input buffer is full (Windows).
=========1.4w10UCIb22===========
- Polyglot now completely poll free...
=========1.4w10UCIb21===========
- Crash bug in memory command fixed
- Small optimizations
=========1.4w10UCIb20===========
- More refactoring.
- No more polling for GUI input
=========1.4w10UCIb18===========
- Two new utilities: info-book and dump-book.
=========1.4w10UCIb17===========
- More refactoring. main.cpp is now #ifdef _WIN32 free.
- The main loop (previously in adapter.cpp) is now in its own file mainloop.cpp.
- adapter.cpp has been renamed into xboard2uci.cpp. It is #ifdef _WIN32 free.
- EOF from the engine no longer kills PG. It should now
be possible to close an engine and reopen another one (if that ever became useful) 
=========1.4w10UCIb16===========
- xboard options commands
- correction of handling of combo boxes in UCI protocol
- "gui-mode". It is now possible to run PG without config file
- The polyglot options are not exported, so they are now settable by the GUI
=========1.4w10UCIb15===========
- Due to refactoring time stamps in Windows would be written twice. 
This has been fixed. 
- More refactoring; the number of #ifdef _WIN32's has again been
drastically reduced.
=========1.4w10UCIb14===========
- option to alter priority now also works on windows
(Eric Mullins)
- refactoring so that posix and win32 part share more
code
- a number of potential busy loop scenarios have been eliminated 