@@ -324,6 +324,9 @@ CONFIG FILE FORMAT
            Show search information during engine pondering.  Turning this off
            might be better for interactive use in some interfaces.
 
+       ScoreWhite (default: true)
+           Report score from white's point of view in xboard mode.
+
        KibitzMove (default: false)
            Whether to kibitz when playing a move.
 
@@ -339,6 +342,10 @@ CONFIG FILE FORMAT
            How many seconds to wait before starting kibitzing.  This has an
            effect only if "KibitzPV" is selected, move kibitzes are always
            sent regardless of the delay.
+
+       KibitzInterval (default: 0)
+           This is another form of throttling. PolyGlot will usually wait this
+           many seconds before doing the next kibitz.
 
        UCI (default: false)
            If true PolyGlot will not understand xboard commands.
@@ -505,4 +512,4 @@ SEE ALSO
 
 
 
-                                  2009-07-20                       POLYGLOT(6)
+                                  2009-07-26                       POLYGLOT(6)
