@@ -35,7 +35,7 @@
 // constants
 
 
-static const char * const Version = "1.4b26";
+static const char * const Version = "1.4b27";
 static const char * const HelpMessage = "\
 SYNTAX\n\
 * polyglot [configfile]\n\
